app/static/styles/subscription_pool_elements.css
/****General****/
a.yes-link {
    color: green;
}
a.maybe-link {
    color: darkorange;
}
a.no-link {
    color: red;
}
/****INDEX Page****/
div#subscription-page-controls {
    position: relative;
    width: 95%;
    height: 4em;
    border-bottom: 2px solid #EEE;
}
div#subscription-page-controls > div {
    position: absolute;
}
div#subscription-pool-controls {
    right: 0;
    bottom: 0;
}
div#subscription-type-selector {
    left: 0;
    margin-top: 1em;
    font-size: 20px;
    width: 20em;
}
a.element-type {
    margin-right: -6px;
    display: inline-block;
    background: #F0F0F0;
    border: 1px solid #DDD;
    border-radius: 15px 15px 0 0;
    padding: 5px 10px;
}
a.element-type.type-active {
    font-weight: bold;
    color: white;
    background: blue;
}
div#subscription-pool-elements-container {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 2em;
}
article.subscription-element {
    width: 340px;
    height: 450px;
    margin: 2em 1em 4em;
}
article.subscription-element > * {
    display: block;
}
article.subscription-element > a {
    height: 300px;
}
article.subscription-element div.subscription-element-display {
    display: flex;
}
article.subscription-element div.subscription-element-display div.input {
    flex-basis: 50%;
}
div.element-illust-type {
    margin-left: 1em;
    padding-top: 0.4em;
    font-size: 20px;
    font-weight: bold;
}
div.subscription-element-info {
    font-size: 16px;
    border: 2px solid;
    margin-top: 5px;
    padding: 5px;
}
div.subscription-element-info.yes-info {
    border-color: limegreen;
}
div.subscription-element-info.maybe-info {
    border-color: darkorange;
}
div.subscription-element-info.no-info {
    border-color: red;
}
div.subscription-element-info.undecided-info {
    border-color: #DDD;
}
div.subscription-element-info a.keep-link {
    margin-top: 0.25em;
    display: inline-block;
    border: 1px solid;
}
div.subscription-element-info a.keep-link.yes-link {
    border-radius: 25px 0 0 25px;
    padding: 5px 20px;
}
div.subscription-element-info a.keep-link.no-link {
    border-radius: 0 25px 25px 0;
    padding: 5px 20px;
}
div.subscription-element-info a.keep-link.maybe-link {
    padding: 5px 10px;
}
article.subscription-element ul {
    margin-left: 20px;
}
article.subscription-element > div.subscription-no-post {
    padding: 0.5em;
    max-height: 450px;
    background: #F0F0F0;
    border: 2px solid #DDD;
    width: 325px;
    overflow-x: hidden;
}
article.subscription-element > div.subscription-no-post > div.preview {
    height: 300px;
}
article.subscription-element > div.subscription-no-post > div.preview > img {
    max-height: 300px;
    max-width: 300px;
}
article.subscription-element > div.subscription-no-post > ul {
    margin-left: 0;
}
article.subscription-element > div.subscription-no-post > ul > li {
    list-style-position: inside;
    text-overflow: ellipsis;
    overflow-x: hidden;
    white-space: nowrap;
}
article.subscription-element div.errors-list {
    border: 1px solid #DDD;
    padding: 5px;
    overflow-x: hidden;
    margin-top: 0.5em;
}
form#form label {
    margin-top: 0;
    margin-bottom: 5px;
    border: 1px solid #8DD;
    border-radius: 25px;
    background: #E0F0F0;
    padding: 5px;
}
form#form div.checkbox-active label {
    background: linear-gradient(270deg, dodgerblue, transparent);
}
/****SHOW Page****/
div#sidebar-container {
    display: flex;
}
aside#subscription-pool-element-sidebar {
    width: 25em;
    border: 2px solid #DDD;
    background: #F8F8F8;
    padding: 0.5em;
    height: fit-content;
    min-height: 50em;
}
aside#subscription-pool-element-sidebar > section {
    margin-bottom: 1em;
}
div#post-content {
    width: 1300px;
    margin-left: 1em;
}
section#image-container {
    cursor: pointer;
    margin-right: 1em;
    margin-bottom: 1em;
}
section#image-container.fullsize img {
    max-height: 100vh;
    width: auto;
}
div#subscription-pool-element-site-content {
    border: 1px solid #DEF;
    background-color: #F8FFFF;
    padding: 5px;
    display: flex;
}
section#subscription-pool-element-info {
    padding: 5px;
    width: 40%;
    margin-right: 1em;
}

